--- a/src/main/resources/assets/elderscrolls/lang/en_us.json
+++ b/src/main/resources/assets/elderscrolls/lang/en_us.json
@@ -1,25 +1,29 @@
 {
-  "item.elderscrolls.gold": "Gold",
   "item.elderscrolls.imperial_spawn_egg": "Imperial Spawn Egg",
-  "block.elderscrolls.nirnroot": "Nirnroot",
-  "item.minecraft.lingering_potion.effect.drunk": "Lingering Drunkenness ",
   "item.minecraft.tipped_arrow.effect.drunk": "Arrow of Drunkenness ",
   "item.minecraft.splash_potion.effect.drunk": "Splash Drunkenness ",
   "entity.elderscrolls.breton": "Breton Citizen",
+  "itemGroup.tabelder_scrolls": "Elder Scrolls",
+  "effect.drunk": "Drunk",
+  "biome.elderscrolls.nibenay_basin": "Nibenay Basin",
+  "item.elderscrolls.logo": "Logo",
+  "item.elderscrolls.summer_bolete_cap": "Summer Bolete Cap",
+  "item.elderscrolls.skooma": "Skooma",
+  "block.elderscrolls.alchemy_table": "Alchemy Table",
+  "item.elderscrolls.gold": "Gold",
+  "block.elderscrolls.nirnroot": "Nirnroot",
+  "item.minecraft.lingering_potion.effect.drunk": "Lingering Drunkenness ",
   "subtitles.gold_down_00": "Gold Dropped",
+  "item.elderscrolls.nord_spawn_egg": "Nord Spawn Egg",
   "subtitles.gold_down_01": "Gold Dropped",
   "item.minecraft.potion.effect.drunk": "Drunkenness ",
   "subtitles.gold_down_02": "Gold Dropped",
-  "itemGroup.tabelder_scrolls": "Elder Scrolls",
-  "biome.elderscrolls.the_rift": "The Rift",
+  "entity.elderscrolls.nord": "Nord",
   "item.elderscrolls.ale": "Ale",
-  "effect.drunk": "Drunk",
+  "biome.elderscrolls.the_rift": "The Rift",
   "entity.elderscrolls.imperial": "Imperial",
   "item.elderscrolls.moon_sugar": "Moon Sugar",
   "subtitles.nirnroot": "Nirnroot",
-  "item.elderscrolls.logo": "Logo",
   "item.elderscrolls.breton_spawn_egg": "Breton Citizen Spawn Egg",
-  "item.elderscrolls.nord_mead": "Nord Mead",
-  "item.elderscrolls.skooma": "Skooma",
-  "block.elderscrolls.alchemy_table": "Alchemy Table"
+  "item.elderscrolls.nord_mead": "Nord Mead"
 }
