Redone Summer Bolete Cap Texture Changed Summer Bolete Cap to block
Changed Music Disc texture

Stopped Nords from spawning

Changed Nibenay Basin biome paramaters

--- a/src/main/resources/assets/elderscrolls/lang/en_us.json
+++ b/src/main/resources/assets/elderscrolls/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "item.elderscrolls.imperial_spawn_egg": "Imperial Spawn Egg",
-  "item.elderscrolls.oblivion_theme": "Oblivion Theme",
+  "item.elderscrolls.oblivion_theme": "Music Disc",
   "subtitles.tes4title": "Korea propaganda",
   "item.minecraft.tipped_arrow.effect.drunk": "Arrow of Drunkenness ",
   "item.minecraft.splash_potion.effect.drunk": "Splash Drunkenness ",
@@ -9,21 +9,20 @@
   "effect.drunk": "Drunk",
   "biome.elderscrolls.nibenay_basin": "Nibenay Basin",
   "item.elderscrolls.logo": "Logo",
-  "item.elderscrolls.summer_bolete_cap": "Summer Bolete Cap",
   "item.elderscrolls.skooma": "Skooma",
   "block.elderscrolls.alchemy_table": "Alchemy Table",
   "item.elderscrolls.gold": "Gold",
+  "block.elderscrolls.summer_bolete_cap": "Summer Bolete Cap",
   "block.elderscrolls.nirnroot": "Nirnroot",
   "item.minecraft.lingering_potion.effect.drunk": "Lingering Drunkenness ",
   "subtitles.gold_down_00": "Gold Dropped",
   "item.elderscrolls.nord_spawn_egg": "Nord Spawn Egg",
   "subtitles.gold_down_01": "Gold Dropped",
   "item.minecraft.potion.effect.drunk": "Drunkenness ",
-  "item.elderscrolls.oblivion_theme.desc": "The Main theme of The Elder Scrolls IV: Oblivion",
+  "item.elderscrolls.oblivion_theme.desc": "Jeremy Soule - Reign of the Septims",
   "subtitles.gold_down_02": "Gold Dropped",
   "entity.elderscrolls.nord": "Nord",
   "item.elderscrolls.ale": "Ale",
-  "biome.elderscrolls.the_rift": "The Rift",
   "entity.elderscrolls.imperial": "Imperial",
   "item.elderscrolls.moon_sugar": "Moon Sugar",
   "subtitles.nirnroot": "Nirnroot",
