--- a/src/main/resources/assets/elderscrolls/lang/en_us.json
+++ b/src/main/resources/assets/elderscrolls/lang/en_us.json
@@ -6,8 +6,9 @@
   "item.minecraft.splash_potion.effect.drunk": "Splash Drunkenness ",
   "entity.elderscrolls.breton": "Breton Citizen",
   "itemGroup.tabelder_scrolls": "Elder Scrolls",
-  "effect.drunk": "Drunk",
   "biome.elderscrolls.nibenay_basin": "Nibenay Basin",
+  "effect.drunk": "Drunk",
+  "subtitles.breton_hit": "",
   "item.elderscrolls.logo": "Logo",
   "item.elderscrolls.skooma": "Skooma",
   "block.elderscrolls.alchemy_table": "Alchemy Table",
